--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "axios": "^1.7.7",
     "firebase": "^11.0.2",
     "lucide-react": "^0.454.0",
+    "rc-slider": "^11.1.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-image-file-resizer": "^0.4.8",
     "react-router-dom": "^6.28.0",
     "react-toastify": "^10.0.6",
     "swiper": "^11.1.14",
+    "uuid": "^11.0.3",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
